# proLeague

./: CMakeLists.txt
include/: datamanager.h  homepage.h  loginpage.h  mainwindow.h  signuppage.h  streamoperators.h
include/Pages/: AdminMenuPage.hpp  BasePage.hpp  HomePage.hpp  LoginPage.hpp  MenuPage.hpp  UserMenuPage.hpp
resources/: style.qss
resources/styles/: style.qss
src/: datamanager.cpp  homepage.cpp  loginpage.cpp  main.cpp  mainwindow.cpp  signuppage.cpp
src/Pages/: AdminMenuPage.cpp  HomePage.cpp  LoginPage.cpp  MenuPage.cpp  UserMenuPage.cpp
ui/: homepage.ui  loginpage.ui  mainwindow.ui  signuppage.ui
